--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "ocpl-logging",
 	"type": "module",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "index.mjs",
 	"scripts": {
 		"start": "electron .",
 		"test": "echo \"Error: no test specified\" && exit 1"
