--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "ocpl-logging",
-	"type": "module",
+	"type": "commonjs",
 	"version": "1.0.0",
-	"main": "index.mjs",
+	"main": "index.js",
 	"scripts": {
 		"start": "electron .",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
-		"electron": "^37.2.0"
+		"electron": "^37.2.0",
+		"electron-reload": "^2.0.0-alpha.1"
 	}
 }
