--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
 	"devDependencies": {
 		"electron": "^37.2.0",
 		"electron-reload": "^2.0.0-alpha.1"
+	},
+	"dependencies": {
+		"xlsx": "^0.18.5"
 	}
 }
