--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
 	"type": "commonjs",
 	"version": "1.0.0",
 	"main": "index.js",
+	"build": {
+		"appId": "com.ocpl.logging",
+		"productName": "OCPL Logging",
+		"files": [
+			"**/*"
+		],
+		"directories": {
+			"buildResources": "assets"
+		}
+	},
 	"scripts": {
 		"start": "electron .",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build": "electron-builder"
 	},
 	"author": "Earl Romeo Ordovez",
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
 		"electron": "^37.2.0",
+		"electron-builder": "^26.0.12",
 		"electron-reload": "^2.0.0-alpha.1"
 	},
 	"dependencies": {
