Removed electron-reload

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
 	"description": "",
 	"devDependencies": {
 		"electron": "^37.2.0",
-		"electron-builder": "^26.0.12",
-		"electron-reload": "^2.0.0-alpha.1"
+		"electron-builder": "^26.0.12"
 	},
 	"dependencies": {
 		"xlsx": "^0.18.5"
