--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
 		"electron-builder": "^26.0.12"
 	},
 	"dependencies": {
-		"choices.js": "^11.1.0",
-		"exceljs": "^4.4.0",
-		"xlsx": "^0.18.5"
+		"exceljs": "^4.4.0"
 	}
 }
